# Python-GeometricNearestNeighborsProcessor

./: README.md  pyproject.toml
GeometricNearestNeighborsProcessor/: __init__.py  processor.py
docs/: Usage-examples.ipynb  prompts.md
